# gemini-tester

./: .gitignore  .pre-commit-config.yml  CHANGELOG.md  GEMINI.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  schedule.yml  test.yml
src/: main.py
tests/: test_main.py
