[project]
name = "gemini-tester"
version = "0.1.0"
description = "A Python project skeleton."
authors = [{ name = "Gemini", email = "gemini@example.com" }]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]



[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
